--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+:root {
+  font-size: 18px;
+
+  --page-height: 88vh;
+  --nav-height: calc(100vh - var(--page-height));
+
+  --dark-header-bg: hsl(220, 15%, 20%);
+  --dark-bg-color: hsl(220, 15%, 15%);
+  --light-text-color: hsl(210, 0%, 85%);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: var(--dark-bg-color);
+  color: var(--light-text-color);
+  font-family: 'EB Garamond';
 }
 
 a {
