--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -1,7 +1,7 @@
 .main-nav {
   margin: auto;
-  padding: 0 1rem;
-  width: calc(100% - 4rem);
+  /* padding: 0 1rem; */
+  width: calc(100% - 2rem);
   height: var(--nav-height);
 
   border-bottom: 2px solid var(--dark-header-bg);
