--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -3,6 +3,14 @@
   padding: 2rem;
 }
 
-.tagline {
-  font-style: italic;
+.container-layout {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  border: 2px solid var(--prim-color-red);
+  text-transform: uppercase;
+  padding: 1rem;
 }
