--- a/components/Membership/Membership.module.css
+++ b/components/Membership/Membership.module.css
@@ -2,11 +2,26 @@
   height: 100vh;
   padding: 2rem;
 }
+.container-layout {
+  display: flex;
+}
 
 .features-grid {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* height: 75%; */
   width: 100%;
+}
+
+.feature-card {
+  background-color: var(--dark-header-bg);
+  margin: 1rem;
+  padding: 1rem;
+  height: 100%;
+  width: 75%;
+  border-radius: 1rem;
+}
+
+.feature-icon {
+  font-size: 3rem;
 }
