--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -8,36 +8,58 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  position: relative;
 }
 
 .main-title {
   cursor: pointer;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.logo-icon {
+  font-size: 3rem;
 }
 
 .main-title h1 {
-  text-align: center;
-  line-height: 1rem;
-  width: 100%;
+  font-size: 1.5rem;
+  font-family: 'Mirza';
+  text-align: justify;
+  text-transform: uppercase;
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
+
+  position: absolute;
+  left: 3rem;
+  top: 1.25rem;
 }
 
-.main-title {
-  font-weight: 1000;
-  /* width: 50%; */
+.title-line {
+  letter-spacing: 1px;
+  line-height: 1rem;
 }
 
+.line-1 {
+  letter-spacing: 1.5px;
+}
+.line-2 {
+  letter-spacing: 0.85px;
+}
+.line-3 {
+  letter-spacing: normal;
+}
 .nav-links {
-  width: 50%;
-
+  /* font-family: 'Mirza'; */
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .nav-link {
   cursor: pointer;
+  padding: 0 1rem;
 }
