--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -5,12 +5,38 @@
 
 .container-layout {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+.banner {
+  width: 100%;
+  /* height: 50%; */
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.heading {
+  position: relative;
+  width: 100%;
+  font-size: 3rem;
+  line-height: 100%;
+
+  text-transform: uppercase;
+}
+
+.tagline {
+  display: grid;
+  width: 100%;
+  font-size: 1.5rem;
+}
+
 .button {
   border: 2px solid var(--prim-color-red);
+  border-radius: 0 0.5rem 0 0.5rem;
   text-transform: uppercase;
   padding: 1rem;
   transition: all 0.25s ease-out;
