--- a/components/Membership/Membership.module.css
+++ b/components/Membership/Membership.module.css
@@ -8,19 +8,113 @@
   justify-content: space-between;
 }
 
+.subheading {
+  font-size: 1rem;
+  font-weight: 300;
+}
+
 .features-grid {
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
 }
 
-.feature-card {
+.features-card {
+  height: 40%;
+  width: 100%;
   background-color: var(--dark-header-bg);
-  margin: 1rem;
-  padding: 1rem;
   border-radius: 0 1rem 0 1rem;
+
+  display: flex;
+  /* offset-x | offset-y | blur-radius | spread-radius | color */
+  box-shadow: 0px 2px 3px 2px rgba(0, 0, 0, 0.1);
 }
 
-.feature-icon {
-  font-size: 3rem;
+.features {
+  width: 70%;
+  padding: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
+
+.features_title {
+  font-size: 1.75rem;
+}
+
+.included-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.included-item {
+  display: flex;
+  font-size: 0.85rem;
+  width: 100%;
+  padding: 0.5rem;
+}
+
+.check-circle {
+  font-size: 1rem;
+  color: mediumaquamarine;
+  margin-right: 0.5rem;
+}
+
+.included-heading {
+  font-size: 0.85rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.divider-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.divider {
+  background-color: var(--prim-color-red);
+  height: 1px;
+  width: 75%;
+}
+
+.price-card {
+  background-color: hsl(210, 15%, 30%);
+  padding: 1rem;
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 0 1rem 0 0;
+}
+
+.price-heading {
+  font-weight: 300;
+  font-size: 1.25rem;
+}
+
+.final-price {
+  font-size: 2.25rem;
+}
+
+.learn-more {
+  text-align: center;
+  font-size: 0.85rem;
+}
+
+.actions {
+  display: grid;
+  gap: 0.5rem;
+}
+.action-button {
+  background-color: var(--dark-bg-color);
+  padding: 0.5rem 0.75rem;
+  border-radius: 0 0.5rem 0 0.5rem;
 }
