--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -12,25 +12,38 @@
 
 .banner {
   width: 100%;
-  /* height: 50%; */
+  height: 50%;
 
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .heading {
   position: relative;
   width: 100%;
-  font-size: 3rem;
+  font-size: 4rem;
+  letter-spacing: 1.5px;
   line-height: 100%;
+  margin-left: 3rem;
 
   text-transform: uppercase;
+}
+.subheading {
+  font-size: 2rem;
 }
 
 .tagline {
   display: grid;
   width: 100%;
+  font-size: 1.25rem;
+  font-weight: 200;
+}
+
+.icon-container {
+  position: relative;
+}
+.icon {
   font-size: 1.5rem;
 }
 
