--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,40 +16,10 @@
   --dark-bg-color: hsl(220, 15%, 15%);
   --light-text-color: hsl(220, 50%, 85%);
 }
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
+/* 
 html,
 body {
   background-color: var(--dark-bg-color);
   color: var(--light-text-color);
   font-family: 'Overpass';
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-li {
-  list-style: none;
-}
-
-button {
-  border: none;
-  font-family: inherit;
-  background-color: inherit;
-  color: inherit;
-}
-
-button:hover {
-  cursor: pointer;
-}
-
-* {
-  box-sizing: border-box;
-}
+} */
