feat: init instructors page css grid, update responsive styles

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -3,6 +3,7 @@
 @use '../../scss/abstracts/variables' as var;
 
 .container {
+  margin-top: 1rem;
   background-color: map-get(colors.$card, 'dark');
   height: 50vh;
 
