--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -46,9 +46,10 @@
 }
 .nav-links {
   padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  display: none;
+  @include mixins.breakpoint('>=md') {
+    @include mixins.flex(row, space-around, center);
+  }
 }
 
 .nav-link {
