feat: update styles, base gray color

--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,6 @@
 @layer base {
   body {
     font-family: 'Overpass', sans-serif;
-    @apply bg-slate-800 text-slate-300;
+    @apply bg-gray-900 text-gray-300;
   }
 }
