--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,7 @@
 /* Mirza */
 @import url('https://fonts.googleapis.com/css2?family=Mirza:wght@400;500;600;700&display=swap');
+/* Overpass Mono */
+@import url('https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;400;500;600;700&display=swap');
 /* Libre Franklin */
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
@@ -16,7 +18,38 @@
 }
 
 @layer components {
-  .action-button {
-    @apply bg-inherit text-sm 2xl:text-lg mt-4 hover:brightness-110 shadow-md hover:shadow-lg mx-auto transition uppercase tracking-widest px-12 py-4 border 2xl:border-2 rounded-bl-lg rounded-br-sm rounded-tr-lg rounded-tl-sm border-primary-700;
+  .outlined-button {
+    @apply bg-inherit font-bold text-sm 2xl:text-lg hover:brightness-110 shadow-md hover:shadow-lg mx-auto transition uppercase tracking-widest px-12 py-4 border 2xl:border-2 border-primary-700;
+  }
+  .filled-button {
+    @apply bg-gray-800 font-bold text-sm 2xl:text-lg px-8 py-4 hover:brightness-110 my-2 mx-auto transition tracking-widest border-primary-700;
+  }
+  .border-theme {
+    @apply rounded-bl-2xl rounded-br-md rounded-tr-2xl rounded-tl-md;
+  }
+}
+
+@layer utilities {
+  img {
+    filter: grayscale(100%);
+  }
+
+  .pattern {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  .pattern::before {
+    content: '';
+    background-image: url('../public/endless-clouds.svg');
+    position: absolute;
+    background-repeat: repeat;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 0.125;
+    z-index: -1;
   }
 }
