--- a/styles/index.css
+++ b/styles/index.css
@@ -25,7 +25,7 @@
     @apply bg-gray-800 font-bold text-sm 2xl:text-lg px-8 py-4 hover:brightness-110 my-2 mx-auto transition tracking-widest border-primary-700;
   }
   .border-theme {
-    @apply rounded-bl-2xl rounded-br-md rounded-tr-2xl rounded-tl-md;
+    @apply rounded-tl-sm rounded-br-sm rounded-tr-md rounded-bl-md;
   }
 }
 
