--- a/styles/index.css
+++ b/styles/index.css
@@ -4,6 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;400;500;600;700&display=swap');
 /* Libre Franklin */
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* Roboto */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -25,7 +27,20 @@
     @apply bg-gray-800 font-bold text-sm 2xl:text-lg px-8 py-4 hover:brightness-110 my-2 mx-auto transition tracking-widest border-primary-700;
   }
   .border-theme {
-    @apply rounded-tl-sm rounded-br-sm rounded-tr-md rounded-bl-md;
+    /* @apply rounded-tl-sm rounded-br-sm rounded-tr-md rounded-bl-md; */
+    @apply rounded-tr-md rounded-bl-md;
+  }
+
+  .features-card {
+    @apply bg-gray-700 h-full relative grid grid-cols-12 grid-rows-4 col-span-12 md:col-span-6 lg:col-span-3 p-8 border-theme pt-16 shadow-md;
+  }
+
+  .features-icon {
+    @apply absolute bg-gray-900 left-[1rem] top-[-1rem] p-4 w-fit;
+  }
+
+  .features-divider {
+    @apply col-span-12 row-span-1 w-full h-[1px] bg-primary-700 my-auto;
   }
 }
 
@@ -50,5 +65,15 @@
     left: 0px;
     opacity: 0.125;
     z-index: -1;
+  }
+
+  .highlight {
+    position: relative;
+    width: 100%;
+  }
+
+  .highlight::before {
+    content: '';
+    @apply absolute z-[-1] h-[60%] w-[85%] bottom-0 bg-primary-700;
   }
 }
