--- a/styles/index.css
+++ b/styles/index.css
@@ -32,7 +32,7 @@
   }
 
   .features-card {
-    @apply border-theme relative col-span-12 grid h-full grid-cols-12 grid-rows-4 bg-gray-700 p-8 pt-16 shadow-lg md:col-span-6 lg:col-span-3;
+    @apply border-theme relative col-span-12 mx-8 grid h-full grid-cols-12 grid-rows-4 bg-gray-700 p-8 pt-16 shadow-lg sm:mx-0 md:col-span-6 lg:col-span-3;
   }
 
   .features-icon {
